# crawlerstack-sdk

./: .gitlab-ci.yml  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/crawlerstack_spiderkeeper_sdk/: __init__.py  constant.py  exceptions.py  repeater.py
src/crawlerstack_spiderkeeper_sdk/config/: __init__.py  settings.yml
src/crawlerstack_spiderkeeper_sdk/utils/: __init__.py  datas.py  metrics.py  request.py
tests/: __init__.py  conftest.py  settings.yml  test_example.py  test_exceptions.py  test_sdk.py  test_version.py
tests/example/: __init__.py  crawlers.py  main.py  metrics.py  request.py  settings.yml  utils.py
tests/example/rest_api/: __init__.py  api.py  schemas.py  server_start.py
tests/utils/: test_datas.py  test_metrics.py  test_request.py
